syntax = "proto3";

package service;

import "commons.proto";
import "merchant_common.proto";

import "google/protobuf/struct.proto";

enum EServiceShowType {
  BOTH = 0;
  CASHIER = 1;
  BOOKING = 2;
  NONE = 3;
}

enum EServiceType {
  SERVICE = 0;
  PRODUCT = 1;
}

message UpdateServiceData {
  oneof kind {
    int32 merchantId = 1;
    double price = 3;
    // double initialPrice = 4;
    int32 durationHour = 6;
    int32 durationMinute = 7;
    string sku = 8;
    string code = 9;
    string name = 10;
    string description = 11;
    string image = 12;
    EServiceType type = 13;
  }
}

message UpdateServiceInput {
  int32 id = 1;
  UpdateServiceData data = 2;
}

message CreateServiceInput {
  optional int32 merchantId = 1;
  optional double price = 3;
  // optional double initialPrice = 4;
  optional int32 durationHour = 6;
  optional int32 durationMinute = 7;
  optional string sku = 8;
  optional string name = 10;
  optional string description = 11;
  optional string image = 12;
  optional EServiceType type = 13;
}

message Service {
  // default field
  int32 id = 1;
  optional string createdAt = 2;
  optional string updatedAt = 3;
  optional string deletedAt = 4;
  optional int32 createdBy = 5;
  optional int32 updatedBy = 6;
  optional int32 deletedBy = 7;

  // reserved field
  optional int32 merchantId = 8;
  optional double price = 10;
  // optional double initialPrice = 11;
  optional int32 durationHour = 13;
  optional int32 durationMinute = 14;
  optional string sku = 15;
  optional string code = 16;
  optional string name = 17;
  optional string description = 18;
  optional string image = 19;
  optional EServiceType type = 20;
  optional merchant_common.Merchant merchant = 23;
  optional float distance = 24;
  optional double latitude = 25;
  optional double longitude = 26;
}

message NullableService {
  oneof kind {
    google.protobuf.NullValue null = 1;
    Service service = 2;
  }
}

message ServicePagination {
  repeated Service items = 1;
  optional commons.PageMeta meta = 2;
}